kubernetes/infrastructure/k8s-monitoring/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-monitoring
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    pod-security.kubernetes.io/enforce: privileged
