kubernetes/infrastructure/k8s-monitoring/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-alloy-egress-to-kube-api-server
  namespace: k8s-monitoring
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - alloy-metrics
          - alloy-logs
          - alloy-singleton
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "10250"
              protocol: TCP
            - port: "9100"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-alloy-operator-egress-to-kube-api-server
  namespace: k8s-monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alloy-operator
  egress:
    - toEntities:
        - kube-apiserver
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-helm-hooks-egress-to-kube-api-server
  namespace: k8s-monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: k8s-monitoring
  egress:
    - toEntities:
        - kube-apiserver
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-state-metrics-egress-to-kube-api-server
  namespace: k8s-monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  egress:
    - toEntities:
        - kube-apiserver
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-alloy-logs-egress-to-loki
  namespace: k8s-monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: k8s-monitoring-alloy-logs
      app.kubernetes.io/name: alloy-logs
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: loki
            app.kubernetes.io/component: gateway
            io.kubernetes.pod.namespace: loki
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-alloy-singleton-egress-to-loki
  namespace: k8s-monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: k8s-monitoring-alloy-singleton
      app.kubernetes.io/name: alloy-singleton
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: loki
            app.kubernetes.io/component: gateway
            io.kubernetes.pod.namespace: loki
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-alloy-metrics-ingress-from-gateway
  namespace: k8s-monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: k8s-monitoring-alloy-metrics
      app.kubernetes.io/name: alloy-metrics
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "12345"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-alloy-metrics-egress-to-mimir
  namespace: k8s-monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: k8s-monitoring-alloy-metrics
      app.kubernetes.io/name: alloy-metrics
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mimir
